src/ui/config_panel/snapshots/codexize__ui__config_panel__tests__adaptive_snapshot_width_120.snap
---
source: src/ui/config_panel/mod.rs
expression: "render_to_text(&state, 120, 20)"
---
"settings────────────────────────────────────────────────────────────────────────────────────────/tmp/example/config.toml"
"▾ Common  ▸ Models  ▸ Notifications ●  ▸ Agents  ▸ System ●                                                             "
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"▌  Review cadence               │ 5                                                                                     "
"   Open runs in split view      │ false                                                                                 "
"   Footer key hints             │ true                                                                                  "
"   Log level                    │ info                                                                                  "
"   Project memory               │ true                                                                                  "
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"Run a full alignment review every N review rounds. Minimum: 1.                                                          "
"Tab page  Enter edit  Space toggle  d default  / search  Ctrl-S save  q/Esc close                          │ config open"
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
