src/ui/config_panel/snapshots/codexize__ui__config_panel__tests__adaptive_snapshot_width_60_shows_tab_bar.snap
---
source: src/ui/config_panel/mod.rs
expression: text
---
"codexize · config · /tmp/example/config.toml                "
"▸meta  ▸ntfy*  ▸ntfy.events  ▸acp.policy  ▸acp.install      "
"▸acp.agents.claude  ▸runner  ▾paths*  ▸ui  ▸ui.colon_palette"
"▸ui.footer  ▸diagnostics  ▸memory                           "
"────────────────────────────────────────────────────────────"
"> cache_root           │ $HOME/.codexize/cache         (def)"
"   *sessions_root        │ $HOME/.codexize/sessions…  overri"
"  runs_root            │ $HOME/.codexize/runs          (def)"
"  memory_root          │ $HOME/.codexize/memory        (def)"
"────────────────────────────────────────────────────────────"
"Root for cache files. $HOME and ~/ are expanded at load.    "
"Tab section · Enter edit · Ctrl-S save · Esc close  |  conf…"
"                                                            "
"                                                            "
"                                                            "
"                                                            "
