src/ui/config_panel/snapshots/codexize__ui__config_panel__tests__adaptive_snapshot_width_80_keeps_primary_hotkeys.snap
---
source: src/ui/config_panel/mod.rs
assertion_line: 3654
expression: text
---
"⚙ Settings──────────────────────────────────────────────/tmp/example/config.toml"
" [General]  Models  Notifications ●  Agents  System ●                           "
"────────────────────────────────────────────────────────────────────────────────"
" ⚙ General                                                                      "
"▌  Full review cadence          │ 5                                             "
"   Open split view              │ ✗ off                                         "
"   Footer key hints             │ ✓ on                                          "
"   Log level                    │ info                                          "
"   Project memory               │ ✓ on                                          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
"Run full alignment review every N review rounds. Minimum: 1.       │ config open"
"←→ section · ↑↓ navigate · Enter edit · Space toggle  │      ^S save · Esc close"
