src/ui/config_panel/snapshots/codexize__ui__config_panel__tests__exit_modal_render_snapshot.snap
---
source: src/ui/config_panel/mod.rs
expression: "render_to_text(&state, 90, 22)"
---
"⚙ Settings────────────────────────────────────────────────────────/tmp/example/config.toml"
" Common  Models  [Notifications] ●  Agents  System ●                                      "
"──────────────────────────────────────────────────────────────────────────────────────────"
" 🔔 Notifications (3 overrides)                                                           " Hidden by multi-width symbols: [(2, " ")]
"   Notifications                │ ✓ on                                                    "
"   Server URL                   │ https://ntfy.sh                                         "
" ● To┌ Unsaved changes ─────────────────────────────────────────────────────────────┐     "
" ● Me│ Your changes haven't been written to disk yet.                               │     "
"▌● Re│                                                                              │     "
"   Re│   [s] Save & close                                                           │     "
"   HT│   [d] Discard & close                                                        │     "
"   Bo│ ▌ [c] Cancel  · keep editing without saving or closing                       │     "
"   Ex│                                                                              │     "
"   Ph│ ↑↓ select · Enter confirm · s/d/c shortcut · Esc cancel                      │     "
"   In└──────────────────────────────────────────────────────────────────────────────┘     "
"   Done alerts                  │ ✓ on                                                    "
"                                                                                          "
"                                                                                          "
"                                                                                          "
"──────────────────────────────────────────────────────────────────────────────────────────"
"Number of notification send attempts. Minimum: 1.               │ ● 4 changes · ^S to save"
"←→ section · ↑↓ navigate · Enter edit · Space toggle · d reset  │      ^S save · Esc close"
