src/ui/config_panel/snapshots/codexize__ui__config_panel__tests__folded_default_render_snapshot.snap
---
source: src/ui/config_panel/mod.rs
assertion_line: 4845
expression: "render_to_text(&state, 100, 18)"
---
"⚙ Settings──────────────────────────────────────────────────────────────────/tmp/example/config.toml"
" General  [Models]  Notifications  Agents  System                                                   "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
" ◇ Models                                                                                           "
"▌▸ claude                                                                                           "
" ▸ gpt                                                                                              "
" ▸ gemini                                                                                           "
" ▸ kimi                                                                                             "
" ▸ deepseek                                                                                         "
" ▸ minimax                                                                                          "
" ▸ qwen                                                                                             "
" ▸ mimo                                                                                             "
" ▸ glm                                                                                              "
"    + New model                                                                                     "
"                                                                                                    "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"Space expands · n new model                                                            │ config open"
"↑↓ navigate · Enter details · n new · x remove  │                                ^S save · Esc close"
