src/ui/config_panel/snapshots/codexize__ui__config_panel__tests__provider_detail_drawer_render_snapshot.snap
---
source: src/ui/config_panel/mod.rs
expression: "render_to_text(&state, 90, 22)"
---
"⚙ Settings────────────────────────────────────────────────────────/tmp/example/config.toml"
" Common  [Models]  Notifications  Agents  System                                          "
"──────────────────────────────────────────────────────────────────────────────────────────"
" ◇ Models                                                                                 "
" ▾ cl┌ claude · claude-opus-4.1 ────────────────────────────────────────────────────┐     "
"  ▾ c│ claude · claude-opus-4.1  (built-in)                                         │     "
"    ▌│                                                                              │     "
"  ▾ c│ ▌  ✓  Enabled                                                                │     "
"     │    ✓  Official  built-in                                                     │     "
"  ▾ c│    ✗  Free  built-in                                                         │     "
"     │    ✗  Ignore quota                                                           │     "
"  ▾ c│    ✗  Cheap eligible                                                         │     "
"     │    ✗  Tough eligible                                                         │     "
"  ▾ c│    ✓  Effort eligible                                                        │     "
"     │                                                                              │     "
"  ▾ c│ Whether this entry is offered when picking a model.                          │     "
"     └──────────────────────────────────────────────────────────────────────────────┘     "
"  ▾ claude-sonnet-4.6                                                                     "
"  ↓ 55 more below                                                                         "
"──────────────────────────────────────────────────────────────────────────────────────────"
"✗ ntfy.server must start with http:// or https://                                         "
"↑↓ navigate · Space toggle · x delete  │                                         Esc close"
