src/ui/config_panel/snapshots/codexize__ui__config_panel__tests__providers_page_render_snapshot.snap
---
source: src/ui/config_panel/mod.rs
expression: "render_to_text(&state, 100, 18)"
---
"settings────────────────────────────────────────────────────────────────────/tmp/example/config.toml"
"▸ Common  ▾ Models  ▸ Notifications  ▸ Agents  ▸ System                                             "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"  ▾ claude · claude-opus-4.1                                                                        "
"    ▌ ✓ claude/claude  claude-opus-4.1  built-in · official · paid · cheap · tough · effort         "
"  ▾ claude · claude-opus-4.5                                                                        "
"      ✓ claude/claude  claude-opus-4.5  built-in · official · paid · cheap · tough · effort         "
"  ▾ claude · claude-opus-4.6                                                                        "
"      ✓ claude/claude  claude-opus-4.6  built-in · official · paid · cheap · tough · effort         "
"  ▾ claude · claude-opus-4.7                                                                        "
"      ✓ claude/claude  claude-opus-4.7  built-in · official · paid · cheap · tough · effort         "
"  ▾ claude · claude-sonnet-4                                                                        "
"      ✓ claude/claude  claude-sonnet-4  built-in · official · paid · cheap · tough · effort         "
"  ▾ claude · claude-sonnet-4.5                                                                      "
"  ↓ 42 more below                                                                                   "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"Enter opens the per-provider detail drawer · a adds a custom entry · x removes                      "
"↑↓ model  Enter details  a add  x remove  Ctrl-S save  Esc close                       │ config open"
