src/ui/config_panel/snapshots/codexize__ui__config_panel__tests__single_pane_snapshot_width_60_wraps_with_continuation_marker.snap
---
source: src/ui/config_panel/mod.rs
expression: text
---
"codexize · config · /tmp/example/config.toml                "
"Section: paths                                              "
"> cache_root           │ $HOME/.codexize/cache         (def)"
"↪   sessions_root        │ $HOME/.codexize/sessio…  override"
"  runs_root            │ $HOME/.codexize/runs          (def)"
"  memory_root          │ $HOME/.codexize/memory        (def)"
"────────────────────────────────────────────────────────────"
"Root for cache files. $HOME and ~/ are expanded at load.    "
"Enter edit · d default · Esc close · Ctrl-S save  |  config…"
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
