src/ui/config_panel/snapshots/codexize__ui__config_panel__tests__two_pane_snapshot_width_80_keeps_primary_hotkeys.snap
---
source: src/ui/config_panel/mod.rs
expression: text
---
"codexize · config · /tmp/example/config.toml                                    "
"▸ meta                 │ ntfy                                                   "
"▾ ntfy              *  │ > enabled              │ true                     (def)"
"▸ ntfy.events          │   server               │ https://ntfy.sh          (def)"
"▸ acp.policy           │   topic                │ 0123456…89abcdef      override"
"▸ acp.install          │   detail_mode          │ minimal               override"
"▸ acp.agents.claude    │   retry_attempts       │ 3                        (def)"
"▸ runner               │   retry_delay_ms       │ 250                      (def)"
"▸ paths             *  │   http_timeout_secs    │ 10                       (def)"
"▸ ui                   │   body_max_bytes       │ 4096                     (def)"
"▸ ui.colon_palette     │   excerpt_max_chars    │ 600                      (def)"
"▸ ui.footer            │   created_at           │                          (def)"
"▸ diagnostics          │   updated_at           │                          (def)"
"▸ memory               │                                                        "
"                       │                                                        "
"────────────────────────────────────────────────────────────────────────────────"
"Enables notification delivery when a topic is configured.                       "
"Enter edit · d default · Esc close · Ctrl-S save  |  config open                "
